# ETLCLI-Datapipeline

Yongyao_clietl/: README.md  pyproject.toml  requirements.txt
Yongyao_clietl/src/Central/: aggregation-description-day.sql  aggregation-user-day.sql  extract.py  load.py  setup.py
Yongyao_clietl/src/Central/clietl.egg-info/: PKG-INFO  SOURCES.txt
Yongyao_clietl/src/Central/etlcli/: __init__.py  db.py
