[project]
name = "Yongyao_clietl"
version = "0.0.1"
authors = [
  { name="Yongyao Huang", email="yongyao.huang95@gmail.com" },
]
description = "A simple ETL CLI tool"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Windows",
]